Example 1 title changed

--- a/Example1 with ui-routing/index.html
+++ b/Example1 with ui-routing/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="MetaApp">
     <head>
-        <title>My Example1 Project to Git</title>
+        <title>My Example1 to Git</title>
         <script type="text/javascript" src="scripts/angular.js"></script>
 	<script type="text/javascript" src="scripts/angular-ui-router.js"></script>
 	<script type="text/javascript" src="scripts/app.js"></script>
